added some clustering to it. so there is an offset and some clustered child nodes as well.